--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"SushiGang27.aternos.me",
+	"ip":"3cheeseMCDO.aternos.me",
 	"port": "36744",
 	"name": "afkbot1",
 	"auto-night-skip":"true"
