--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"ip":"3cheeseMCDO.aternos.me",
 	"port": "25565",
-	"name": "afkbot1",
-	"auto-night-skip":"true"
+	"name": "tacos3viandefondant",
+	"auto-night-skip":"false"
 }
